code25_all/scala/5080406.txt
scala> implicit def listToAlternativeList[F,T](xs: List[F])(implicit conv: (F) => T) = xs map conv
listToAlternativeList: [F,T](xs: List[F])(implicit conv: (F) => T)List[T]

scala> implicit def int2string(i: Int) = i.toString
int2string: (i: Int)java.lang.String

scala> val l = List(1, 2, 3)
l: List[Int] = List(1, 2, 3)

scala> val l2: List[String] = listToAlternativeList[Int,String](l)
l2: List[String] = List(1, 2, 3)

scala> val l2: List[String] = listToAlternativeList(l)            
l2: List[String] = List(1, 2, 3)

scala> val l2: List[String] = l                     
<console>:10: error: type mismatch;
 found   : List[Int]
 required: scala.List[String]
       val l2: List[String] = l
                          ^

